update socket server configuration to support customizable network and address options

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 # socket
-SOCKET_PORT=18077
+# tcp or unix
+SOCKET_NETWORK=tcp
+# :18077 or /directory/sconcur.sock
+SOCKET_ADDRESS=:18077
+
 
 # logging
 LOG_DIR=storage/logs
